# adk-examples

./: pyproject.toml
multi_agent/: README.md  __init__.py
multi_agent/manager/: agent.py
multi_agent/manager/sub_agents/funny_nerd/: agent.py
multi_agent/manager/sub_agents/news_analyst/: agent.py
multi_agent/manager/sub_agents/stock_analyst/: agent.py
multi_agent/manager/tools/: tools.py
persistent_state/: main.py  utils.py
persistent_state/memory_agent/: __init__.py
persistent_storage/: main.py
sequential_agent/lead_qualification_agent/: agent.py
sequential_agent/lead_qualification_agent/sub_agents/: __init__.py
sequential_agent/lead_qualification_agent/sub_agents/recommender/: agent.py
sequential_agent/lead_qualification_agent/sub_agents/scorer/: __init__.py  agent.py
sequential_agent/lead_qualification_agent/sub_agents/validator/: __init__.py  agent.py
session-memory/: .env.example
stateful_multi_agent/: main.py
structured_output/email_agent/: agent.py
tool-agent/: agent.py
